cabal-version:      2.4
name:               chisito
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Ezequiel Ramis
maintainer:         ezequielramis.hello@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable chisito
    ghc-options:      -threaded -Wall -Wcompat -O2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Game,
                      Decode,
                      UI,
                      Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0,
                      vty,
                      bytestring,
                      bitwise,
                      vector,
                      microlens,
                      microlens-th,
                      random,
                      proteaaudio
    hs-source-dirs:   app
    default-language: Haskell2010
